slew of various fixes migrate out of RestTemplate to RestClient everywhere