@@ -9,29 +9,20 @@ import io.opentelemetry.instrumentation.spring.web.v3_1.SpringWebTelemetry;
 import lombok.*;
 import lombok.extern.slf4j.Slf4j;
 import net.es.oscars.app.props.StartupProperties;
-import net.es.oscars.app.util.HeaderRequestInterceptor;
 
 import net.es.oscars.sb.nso.exc.NsoCommitException;
 import net.es.oscars.app.props.NsoProperties;
 import net.es.oscars.sb.nso.exc.NsoDryrunException;
-import net.es.oscars.sb.nso.rest.NsoDryRun;
-import net.es.oscars.sb.nso.rest.NsoResponseErrorHandler;
-import net.es.oscars.sb.nso.rest.NsoServicesWrapper;
-import net.es.oscars.sb.nso.rest.LiveStatusRequest;
-import net.es.oscars.sb.nso.rest.LiveStatusMockData;
-import net.es.oscars.sb.nso.rest.LiveStatusOutput;
+import net.es.oscars.sb.nso.rest.*;
 import net.es.topo.common.dto.nso.*;
 
-import net.es.topo.common.dto.nso.enums.NsoCheckSyncState;
 import net.es.topo.common.dto.nso.enums.NsoPlatform;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
-import org.springframework.boot.restclient.RestTemplateBuilder;
 import org.springframework.core.io.Resource;
 import org.springframework.http.*;
 import org.springframework.http.client.HttpComponentsClientHttpRequestFactory;
 import org.springframework.http.client.support.BasicAuthenticationInterceptor;
-import org.springframework.http.converter.HttpMessageConverter;
 import org.springframework.http.converter.json.JacksonJsonHttpMessageConverter;
 import org.springframework.retry.annotation.Backoff;
 import org.springframework.retry.annotation.Retryable;
@@ -39,16 +30,10 @@ import org.springframework.stereotype.Component;
 import org.springframework.web.client.*;
 
 import net.es.topo.common.dto.nso.enums.NsoService;
-import net.es.oscars.sb.nso.dto.NsoLspResponse;
-import net.es.oscars.sb.nso.dto.NsoVplsResponse;
 import tools.jackson.databind.json.JsonMapper;
 
-import java.io.File;
-import java.io.IOException;
-import java.io.PrintWriter;
-import java.io.StringWriter;
-import java.nio.file.Files;
-import java.time.Duration;
+import java.io.*;
+import java.nio.charset.StandardCharsets;
 import java.util.*;
 
 @Slf4j
@@ -56,6 +41,7 @@ import java.util.*;
 public class NsoProxy {
 
     public static final String APPLICATION_YANG_DATA_JSON = "application/yang-data+json";
+    public static final String APPLICATION_YANG_DATA_XML = "application/yang-data+xml";
     public static final String APPLICATION_YANG_PATCH_JSON = "application/yang-patch+json";
     public static final String RESTCONF_DATA = "restconf/data";
 
@@ -73,11 +59,9 @@ public class NsoProxy {
     @Setter
     static NsoResponseErrorHandler patchErrorHandler = new NsoResponseErrorHandler();
 
-    @Setter
-    private RestTemplate restTemplate;
-    private RestTemplate xmlRestTemplate;
 
     private RestClient patchClient;
+    private RestClient xmlClient;
     private RestClient restClient;
     private JsonMapper skipEmptyObjectMapper;
 
@@ -85,7 +69,7 @@ public class NsoProxy {
 
 
     @Autowired
-    public NsoProxy(NsoProperties props, StartupProperties startupProperties, RestTemplateBuilder builder, OpenTelemetry openTelemetry) {
+    public NsoProxy(NsoProperties props, StartupProperties startupProperties, OpenTelemetry openTelemetry) {
 
         this.props = props;
         this.startupProperties = startupProperties;
@@ -130,23 +114,21 @@ public class NsoProxy {
                     })
                     .build();
 
-            this.xmlRestTemplate = builder.requestFactory(HttpComponentsClientHttpRequestFactory.class)
-                    .connectTimeout(Duration.ofSeconds(5))
-                    .readTimeout(Duration.ofSeconds(300))
+            xmlClient = RestClient.builder()
+                    .requestFactory(new HttpComponentsClientHttpRequestFactory())
+                    .configureMessageConverters(client -> {
+                        client.registerDefaults().withJsonConverter(new JacksonJsonHttpMessageConverter(skipEmptyObjectMapper));
+                    })
+                    .defaultHeaders(headers -> {
+                        headers.add(HttpHeaders.ACCEPT, APPLICATION_YANG_DATA_JSON);
+                        headers.add(HttpHeaders.CONTENT_TYPE, APPLICATION_YANG_DATA_XML);
+                    })
+                    .requestInterceptors(interceptors -> {
+                        interceptors.add(new BasicAuthenticationInterceptor(props.getUsername(), props.getPassword()));
+                        interceptors.add(telemetry.createInterceptor());
+                    })
                     .build();
-            xmlRestTemplate.getInterceptors().add(new BasicAuthenticationInterceptor(props.getUsername(), props.getPassword()));
-            xmlRestTemplate.getInterceptors().add(new HeaderRequestInterceptor("Accept", "application/yang-data+json"));
-            xmlRestTemplate.getInterceptors().add(new HeaderRequestInterceptor("Content-type", "application/yang-data+xml"));
-            xmlRestTemplate.getInterceptors().add(telemetry.createInterceptor());
 
-            this.restTemplate = builder
-                    .messageConverters(new JacksonJsonHttpMessageConverter(skipEmptyObjectMapper))
-                    .build();
-            restTemplate.setErrorHandler(restErrorHandler);
-            restTemplate.getInterceptors().add(new BasicAuthenticationInterceptor(props.getUsername(), props.getPassword()));
-            restTemplate.getInterceptors().add(new HeaderRequestInterceptor(HttpHeaders.ACCEPT, APPLICATION_YANG_DATA_JSON));
-            restTemplate.getInterceptors().add(new HeaderRequestInterceptor(HttpHeaders.CONTENT_TYPE, APPLICATION_YANG_DATA_JSON));
-            restTemplate.getInterceptors().add(telemetry.createInterceptor());
 
         } catch (Exception ex) {
             log.error(ex.getMessage(), ex);
@@ -221,39 +203,6 @@ public class NsoProxy {
         }
     }
 
-    public NsoCheckSyncState checkSync(String device) {
-        if (startupProperties.getStandalone()) {
-            log.info("standalone mode - returning in-sync for {}", device);
-            return NsoCheckSyncState.IN_SYNC;
-        }
-        String path = RESTCONF_DATA + "/tailf-ncs:devices/device=" + device + "/check-sync";
-        String restPath = props.getUri() + path;
-        log.info("checking sync " + restPath);
-        ResponseEntity<FromNsoCheckSync> response = restTemplate.postForEntity(restPath, null, FromNsoCheckSync.class);
-
-        if (response.getStatusCode().isError()) {
-            log.error("REST error during check-sync for {} : {}", device, response.getBody());
-            return NsoCheckSyncState.UNKNOWN;
-        } else {
-            if (response.getBody() == null) {
-                log.error("empty check-sync for {} : null body", device);
-                return NsoCheckSyncState.UNKNOWN;
-            } else if (response.getBody().getOutput() == null) {
-                log.error("empty check-sync for {} : null output", device);
-                return NsoCheckSyncState.UNKNOWN;
-            } else if (response.getBody().getOutput().getResult() == null) {
-                log.error("empty check-sync for {} : null result", device);
-                return NsoCheckSyncState.UNKNOWN;
-            } else {
-                if (response.getBody().getOutput().getResult().equals(NsoCheckSyncState.ERROR)) {
-                    log.error("NSO error during check-sync for {} : {}", device, response.getBody().getOutput().getInfo());
-                }
-                return response.getBody().getOutput().getResult();
-            }
-        }
-
-
-    }
 
     @Retryable(backoff = @Backoff(delayExpression = "${nso.backoff-milliseconds}"), maxAttemptsExpression = "${nso.retry-attempts}")
     public void buildServices(NsoServicesWrapper wrapper, String connectionId) throws NsoCommitException {
@@ -273,7 +222,11 @@ public class NsoProxy {
         logNsoObject(wrapper);
 
         try {
-            ResponseEntity<IetfRestconfErrorResponse> response = restTemplate.postForEntity(restPath, wrapper, IetfRestconfErrorResponse.class);
+            ResponseEntity<IetfRestconfErrorResponse> response = restClient.post()
+                    .uri(restPath)
+                    .body(wrapper)
+                    .retrieve()
+                    .toEntity(IetfRestconfErrorResponse.class);
 
             if (response.getStatusCode().isError()) {
                 log.error("raw error: " + response.getBody());
@@ -300,18 +253,6 @@ public class NsoProxy {
         }
     }
 
-    @Retryable(backoff = @Backoff(delayExpression = "${nso.backoff-milliseconds}"), maxAttemptsExpression = "${nso.retry-attempts}")
-    public void syncFrom(String device) {
-        if (startupProperties.getStandalone()) {
-            log.info("standalone mode - skipping southbound");
-            return;
-        }
-
-        String path = "restconf/data/tailf-ncs:devices/device=%s/sync-from".formatted(device);
-        String restPath = props.getUri() + path;
-        restTemplate.postForLocation(restPath, HttpEntity.EMPTY);
-    }
-
     public String buildDryRun(NsoServicesWrapper wrapper, String connectionId) throws NsoDryrunException {
         if (startupProperties.getStandalone()) {
             log.info("standalone mode - skipping southbound");
@@ -336,7 +277,13 @@ public class NsoProxy {
         String errorRef = "Error reference: [" + errorUuid + "]\n";
 
         try {
-            ResponseEntity<NsoDryRun> dryRunResponse = restTemplate.postForEntity(restPath, wrapper, NsoDryRun.class);
+            ResponseEntity<NsoDryRun> dryRunResponse = restClient.post()
+                    .uri(restPath)
+                    .body(wrapper)
+                    .retrieve()
+                    .toEntity(NsoDryRun.class);
+
+
             if (dryRunResponse.getStatusCode().isError()) {
                 log.error("raw error: " + dryRunResponse.getBody());
                 throw new NsoDryrunException("unable to perform dry run " + dryRunResponse.getBody());
@@ -641,81 +588,28 @@ public class NsoProxy {
 
         final HttpEntity<LiveStatusRequest> requestEntity = new HttpEntity<>(request);
 
-        // first, try to get a LiveStatusOutput
-        ResponseEntity<Object> responseEntity = null;
-        try {
-            responseEntity = restTemplate.postForEntity(restPath, requestEntity, Object.class);
-            if (responseEntity.getStatusCode() != HttpStatus.OK) {
-                if (responseEntity.getStatusCode() == HttpStatus.BAD_REQUEST) {
-                    throw new RestClientException("Bad request reported by server. Processing error message:\n" + responseEntity.getBody());
-                } else {
-                    throw new Exception("URL " + restPath + ". Unexpected response code: " + responseEntity.getStatusCode() + ", body:\n" + responseEntity.getBody().toString());
+        DeserializerUtils.EitherLiveStatusOrError response = restClient.post()
+                .uri(restPath)
+                .body(requestEntity)
+                .retrieve()
+                .body(DeserializerUtils.EitherLiveStatusOrError.class);
+
+        if (response == null) {
+
+        } else {
+            LiveStatusOutput lso = response.getStatusOutput();
+            IetfRestconfErrorResponse err = response.getErrorResponse();
+            if (lso != null) {
+                return lso.getOutput();
+            } else if (err != null) {
+
+                for (IetfRestconfErrorResponse.IetfError error : err.getErrors().getErrorList()) {
+                    errorStr.append(error.getErrorMessage()).append("\n");
                 }
+                return errorStr.toString();
+
             }
-            if (responseEntity.getBody() != null) {
-                // Attempt to deserialize as LiveStatusOutput
-                // or
-                // Attempt to deserialize as IetfRestconfErrorResponse
-                try {
-                    JsonMapper mapper = JsonMapper.builder()
-
-                            .changeDefaultPropertyInclusion(incl -> incl.withValueInclusion(JsonInclude.Include.NON_NULL))
-                            .build();
-
-                    LinkedHashMap<String, String> body = ((LinkedHashMap<String, String>) responseEntity.getBody());
-
-                    String json = mapper.writeValueAsString(body);
-
-                    if (body.containsKey("esnet-status:output")) {
-                        LiveStatusOutput liveOutput = mapper.readValue(json, LiveStatusOutput.class);
-
-                        return liveOutput.getOutput();
-                    } else {
-                        // Cannot figure out what this is.
-                        throw new Exception("Unknown body content received. Cannot deserialize as LiveStatusOutput or IetfRestconfErrorResponse:\n" + json);
-                    }
-
-                } catch (Exception e) {
-                    // Unknown exception
-                    log.error("NsoProxy.getLiveStatusShow() - Error while attempting to process response for LiveStatusOutput:\n" + e.getMessage());
-                }
-
-            } else {
-                errorStr.append("null response body\n");
-            }
-        } catch (RestClientException re) {
-            try {
-                if (responseEntity != null) {
-                    JsonMapper jsonMapper = JsonMapper.builder()
-                            .changeDefaultPropertyInclusion(incl -> incl.withValueInclusion(JsonInclude.Include.NON_NULL))
-                            .build();
-
-                    LinkedHashMap<String, String> body = ((LinkedHashMap<String, String>) responseEntity.getBody());
-
-                    // protect against nulls
-                    if (body == null) {
-                        body = new LinkedHashMap<>();
-                    }
-
-                    String json = jsonMapper.writeValueAsString(body);
-
-                    if (body.containsKey("ietf-restconf:errors")) {
-                        IetfRestconfErrorResponse ietfError = jsonMapper.readValue(json, IetfRestconfErrorResponse.class);
-                        for (IetfRestconfErrorResponse.IetfError error : ietfError.getErrors().getErrorList()) {
-                            errorStr.append(error.getErrorMessage()).append("\n");
-                        }
-                    } else {
-                        throw new Exception("NsoProxy.getLiveStatusShow() - Error while attempting to process response for IetfRestconfErrorResponse:\n" + json);
-                    }
-                }
-            } catch (Exception e) {
-                log.error(e.getLocalizedMessage(), e);
-            }
-        } catch (Exception e) {
-            // Not something we can deserialize.
-            log.error(e.getLocalizedMessage(), e);
         }
-
         return errorStr.toString();
     }
 
@@ -747,15 +641,13 @@ public class NsoProxy {
         String req = RESTCONF_DATA+"tailf-ncs:services%s".formatted(path);
 
         String restPath = props.getUri() + req;
-        String response = restTemplate.getForObject(restPath, String.class);
-        // DevelUtils.dumpDebug("get-nso-service", response);
-
-        if (response != null) {
+        try {
+            String response = restClient.get().uri(restPath).retrieve().body(String.class);
             result.setConfig(response);
             result.setSuccessful(true);
             log.debug("%s: get service COMPLETE ".formatted(service.toString()));
-        } else {
-            log.warn("%s: get config FAILED ".formatted(service.toString()));
+        } catch (RestClientException ex) {
+            log.warn("%s: get service config FAILED ".formatted(service.toString()));
         }
         return result;
     }
@@ -803,11 +695,18 @@ public class NsoProxy {
         String restPath = props.getUri() + "restconf/tailf/query";
 
         try {
-            File file = deviceListQueryResource.getFile();
-            String xmlPayload = new String(Files.readAllBytes(file.toPath()));
+
+            InputStream inputStream = deviceListQueryResource.getInputStream();
+
+            String xmlPayload = new String(inputStream.readAllBytes(), StandardCharsets.UTF_8);
 
 
-            ResponseEntity<FromNsoImmediateQueryResult> response = xmlRestTemplate.postForEntity(restPath, xmlPayload, FromNsoImmediateQueryResult.class);
+            ResponseEntity<FromNsoImmediateQueryResult> response = xmlClient.post()
+                            .uri(restPath)
+                            .body(xmlPayload)
+                            .retrieve()
+                            .toEntity(FromNsoImmediateQueryResult.class);
+
             FromNsoDeviceList fdl = FromNsoDeviceList.mapQueryToDeviceList(response.getBody());
             FromNsoDeviceList result = FromNsoDeviceList.builder()
                     .devices(new ArrayList<>())
